Fixed misalignment between title and github logo

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
 }
 
-a {
+#projects a {
   font-family: "Source Serif Pro", serif;
   font-size: 1.5em;
   text-decoration: none;
